fixed white space on 320px media screen and phone on full-hd screen

--- a/src/assets/scss/@media-320px.scss
+++ b/src/assets/scss/@media-320px.scss
@@ -2,4 +2,15 @@
   .navigation__item:not(:last-child) {
     margin-right: 10px;
   }
+
+  .application-store {
+    justify-content: space-between;
+    &__img {
+      max-width: 100%;
+    }
+  }
+
+  .application-store__img {
+    max-width: 100%;
+  }
 }
